<?xml version="1.0" encoding="utf-8"?>
<!--Code adapted from Code with Cal https://www.youtube.com/watch?v=Ba0Q-cK1fJo-->
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.calendarApp.Calendar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="?android:textColorPrimary"
            android:backgroundTint="@color/purple_500"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="previousMonthAction"
            android:textSize="20sp"/>


        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/january_2022"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forward"
            android:textColor="?android:textColorPrimary"
            android:backgroundTint="@color/purple_500"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="nextMonthAction"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textColor="?android:textColorPrimary"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textColor="?android:textColorPrimary"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textColor="?android:textColorPrimary"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textColor="?android:textColorPrimary"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thur"
            android:textColor="?android:textColorPrimary"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textColor="?android:textColorPrimary"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textColor="?android:textColorPrimary"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>